# validador_carte-rust

./: README.md
validador/: Cargo.toml
validador/src/: lib.rs
